完成 assistant-core 模块中 Servlet 和 ThreadLocal 相关内容剥离