@@ -58,7 +58,7 @@ public class ScanProperties {
     }
 
     public List<String> getScanGroupIds() {
-        List<String> defaultGroupIds = Stream.of("cn.herodotus").collect(Collectors.toList());
+        List<String> defaultGroupIds = Stream.of("cn.herodotus").toList();
 
         if (CollectionUtils.isEmpty(this.scanGroupIds)) {
             this.scanGroupIds = new ArrayList<>();
